# turboquant-model

./: .gitignore  README.md  pyproject.toml  test_moe_detection.py
.github/workflows/: pages.yml
docs/: quantization-options.md  quantize-pipeline.md
site/: next.config.js  package-lock.json  package.json  tailwind.config.js
site/src/app/: globals.css  layout.tsx  page.tsx
site/src/app/dequantize-pipeline/: page.tsx
site/src/app/quantize-pipeline/: page.tsx
site/src/app/techniques/fused-kernels/: page.tsx
site/src/app/techniques/lloyd-max/: page.tsx
site/src/app/techniques/packing/: page.tsx
site/src/app/techniques/qjl/: page.tsx
site/src/app/techniques/residual/: page.tsx
site/src/app/techniques/rotation/: page.tsx
site/src/app/techniques/walsh-hadamard/: page.tsx
site/src/components/: AnimatedCounter.tsx  Footer.tsx  Math.tsx  Navbar.tsx  Reveal.tsx  ScrollProgress.tsx  TechniqueLayout.tsx
site/src/components/animations/: BitPackingViz.tsx  ButterflyDiagram.tsx  CodebookViz.tsx  GaussianQuantizationViz.tsx  KernelFusionViz.tsx  MatrixCompressionViz.tsx  PipelineFlow.tsx  ResidualViz.tsx  RotationViz.tsx
src/turboquant_model/: __init__.py  cli.py  codebook.py  cutile_kernels.py  model.py  module.py  moe.py  offload.py  quantize.py  residual.py  rotation.py  triton_kernels.py
tests/: report_qwen3_5.json  test_hierarchical.py  test_metal_kernel.py  test_moe.py  test_qwen3_5.py  test_residual_merge.py  test_safetensors_save_load.py
